# vecihi-configurator

./: CLAUDE.md  ELRS_BASLAT.bat  FIREWALL_EKLE.bat  GOREVLER.md  LICENSE  Low Poly Palne .glb  README.md  configurator.html  elrs_backpack.html  elrs_backpack_proxy.py  elrs_dinle.py  manifest.json  restart_ground_control.vbs  start_ground_control.cmd  start_ground_control.vbs  style.css  sw.js  vecihi-configurator.code-workspace
.claude/: settings.local.json
.github/workflows/: build-desktop-exe.yml
Vecihi PCB/Fzz/: Untitled Sketch.fzz
Vecihi PCB/Gerber/: Untitled Sketch_contour.gm1  Untitled Sketch_copperBottom.gbl  Untitled Sketch_copperTop.gtl  Untitled Sketch_drill.txt  Untitled Sketch_maskBottom.gbs  Untitled Sketch_maskTop.gts  Untitled Sketch_pasteMaskBottom.gbp  Untitled Sketch_pasteMaskTop.gtp  Untitled Sketch_pnp.xy  Untitled Sketch_silkBottom.gbo  Untitled Sketch_silkTop.gto
assets/: changelog.json
assets/css/: style.css
assets/js/: advanced_page.js  aircraft_model.js  calibration.js  changelog.js  failsafe_page.js  firmware.js  flight_modes.js  i18n.js  kml_converter.js  logger.js  main.js  osd.js  outputs.js  outputs_page.js  pid.js  (+7 more)
desktop/: CMakeLists.txt  build.bat  download_vendor.bat  main.cpp
docs/: GOREVLER.md  MANIFEST.md  WIRING.md
drafts/: elrs_backpack.html
js/: advanced_page.js  aircraft_model.js  flight_modes.js  logger.js  main.js  osd.js  outputs_page.js  page_management.js  pid.js  sensor_alignment.js  sensors.js  serial_communication.js  transmitter.js  waypoint.js
models/: scene.gltf  scene_embedded.gltf
tools/: backpack_ws_proxy.py  ground_control_launcher.py  mavlink_ws_proxy.py  start_ground_control.cmd  start_ground_control.vbs  tile_server.py
(+4 files in other folders)
